Prevent steps wrap

--- a/public/css/entry.css
+++ b/public/css/entry.css
@@ -311,6 +311,7 @@ form {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: nowrap !important;
 }
 
 .entry-back-text {
